--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,8 +1,25 @@
-<h1> Cocktails! </h1>
+<div class="container">
+    <div class="home-banner text-center p-5">
+        <h1>Cocktails</h1>
+    </div>
+    <div class="row justify-content-center">
+        <% @cocktails.each do |cocktail| %>
+        <div class="col-lg-4 col-12  p-2">
 
-<% @cocktails.each do |cocktail| %>
-  <p><strong> <%= link_to cocktail.name, cocktail_path(cocktail) %></strong></p>
-<% end %>
+            <div class="card" style="height: 100%;">
+              <img class="card-img-top" src="<%=cocktail.image_url%>" alt="Card image cap">
+                <div class="card-body">
+                <div class="card-title text-center">
+                    <p><strong> <%= link_to cocktail.name, cocktail_path(cocktail)%></strong></p>
+                </div>
+                <div class="card-text"><%=cocktail.description%></div>
+            </div>
+            </div>
+        </div>
 
 
-<%= link_to "Add a new cocktail", new_cocktail_path  %>
+        <% end %>
+    </div>
+    
+
+    <%= link_to "Add a new cocktail", new_cocktail_path, class: "btn btn-success"%>
