--- a/app/views/cocktails/edit.html.erb
+++ b/app/views/cocktails/edit.html.erb
@@ -4,7 +4,7 @@
     <%= f.input :name %>
     <%= f.input :description %>
     <%= f.input :image_url %>
-    <%= f.submit 'Add Cocktail', class: 'btn btn-success' %>
+    <%= f.submit 'Change Cocktail', class: 'btn btn-success' %>
     <% end %>
     <hr>
     <%= link_to  "Back", cocktails_path, class: "btn btn-success"%>
