--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,27 +1,28 @@
-
 <div class="container pt-5">
-<div class="banner">
-<h1><%=@cocktail.name%></h2>
-<h3>Ingredients</h3>
-<ul class="list-group pb-2">
-<% @cocktail.doses.each do |dose| %>
-         <li class="list-group-item"><%= dose.description%> - <%= dose.ingredient.name%>
-         <%= link_to "Delete", dose_path(dose), method: :delete, data: { confirm: 'Are you sure you want to delete' }%>
-</li>
+    <div class="banner">
+        <h1><%=@cocktail.name%></h2>
+            <h3>Ingredients</h3>
+            <ul class="list-group pb-2">
+                <% @cocktail.doses.each do |dose| %>
+                <li class="list-group-item"><%= dose.description%> - <%= dose.ingredient.name%>
+                    <%= link_to "Delete", dose_path(dose), method: :delete, data: { confirm: 'Are you sure you want to delete' }%>
+                </li>
+                <% end %>
+            </ul>
+    </div>
+    <hr>
+    <h4>Add a Ingredient</h4>
+    <%= simple_form_for [@cocktail, @dose] do |f| %>
+    <%= f.input :ingredient_id,collection: @ingredients %>
+    <%= f.input :description %>
+
+    <%= f.submit 'Add Ingredient', class: 'btn btn-success m-2' %>
     <% end %>
-</ul>
-</div>
-<hr>
-      <h4>Add a Ingredient</h4>
-      <%= simple_form_for [@cocktail, @dose] do |f| %>
-        <%= f.input :ingredient_id,collection: @ingredients %>
-        <%= f.input :description %>
 
-        <%= f.submit 'Add Ingredient', class: 'btn btn-success m-2' %>
-      <% end %>
+    <%= link_to  "Back", cocktails_path, class: "btn btn-success m-2"%>
+    <%= link_to  "Delete", cocktail_path ,method: :delete, class: "btn btn-success m-2"%>
+    <%= link_to  "Edit", edit_cocktail_path ,method: :get, class: "btn btn-success m-2"%>
 
-            <%= link_to  "Back", cocktails_path, class: "btn btn-success m-2"%>
-            <%= link_to  "Delete", cocktail_path ,method: :delete, class: "btn btn-success m-2"%>
 
 
 </div>
