--- a/app/views/cocktails/edit.html.erb
+++ b/app/views/cocktails/edit.html.erb
@@ -3,7 +3,7 @@
     <%= simple_form_for [@cocktail] do |f| %>
     <%= f.input :name %>
     <%= f.input :description %>
-    <%= f.input :image_url %>
+    <%= f.input :photos, as: :file %>
     <%= f.submit 'Change Cocktail', class: 'btn btn-success' %>
     <% end %>
     <hr>
