--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -7,7 +7,11 @@
         <div class="col-lg-4 col-12  p-2">
 
             <div class="card" style="height: 100%;">
-              <img class="card-img-top" src="<%=cocktail.image_url%>" alt="Card image cap">
+                <% if cocktail.photos.attached? %>
+                <img class="card-img-top" src="<%= cl_image_path cocktail.photos.first.key, height: 300, width: 300%>" alt="Card image cap">
+                <%else%>
+                <img class="card-img-top" src="http://via.placeholder.com/300/300" alt="Card image cap">
+                <%end%>        
                 <div class="card-body">
                 <div class="card-title text-center">
                     <p><strong> <%= link_to cocktail.name, cocktail_path(cocktail)%></strong></p>
