--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,6 +1,14 @@
 <div class="container pt-5">
     <div class="banner">
         <h1><%=@cocktail.name%></h2>
+        <% unless @cocktail.photos.attached? %>
+        <h2> There is no picture :(,Would you like to add one now ?</h2>
+        <%= simple_form_for [@cocktail] do |f| %>
+        <%= f.input :photos, as: :file %>
+        <%= f.submit 'Change Cocktail', class: 'btn btn-success' %>
+        <%end%>    
+                <%end%>    
+
             <h3>Ingredients</h3>
             <ul class="list-group pb-2">
                 <% @cocktail.doses.each do |dose| %>
@@ -20,7 +28,7 @@
     <% end %>
 
     <%= link_to  "Back", cocktails_path, class: "btn btn-success m-2"%>
-    <%= link_to  "Delete", cocktail_path ,method: :delete, class: "btn btn-success m-2"%>
+    <%= link_to  "Delete", cocktail_path ,method: :delete, class: "btn btn-success m-2", data: { confirm: 'Are you sure you want to delete' }%>
     <%= link_to  "Edit", edit_cocktail_path ,method: :get, class: "btn btn-success m-2"%>
 
 
