--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -8,9 +8,9 @@
 
             <div class="card" style="height: 100%;">
                 <% if cocktail.photos.attached? %>
-                <img class="card-img-top" src="<%= cl_image_path cocktail.photos.first.key, height: 300, width: 300%>" alt="Card image cap">
+                <img class="card-img-top" src="<%= cl_image_path cocktail.photos.last.key, height: 300, width: 300%>" alt="Card image cap">
                 <%else%>
-                <img class="card-img-top" src="http://via.placeholder.com/300/300" alt="Card image cap">
+                <%= image_tag  "glass_water.jpg" , {:style => "width:300px; height:300px; object-fit:cover"}%>
                 <%end%>        
                 <div class="card-body">
                 <div class="card-title text-center">
