--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,6 +1,7 @@
 <div class="container pt-5">
     <div class="banner">
         <h1><%=@cocktail.name%></h2>
+        </div>
         <% unless @cocktail.photos.attached? %>
         <h2> There is no picture :(,Would you like to add one now ?</h2>
         <%= simple_form_for [@cocktail] do |f| %>
@@ -8,6 +9,7 @@
         <%= f.submit 'Change Cocktail', class: 'btn btn-success' %>
         <%end%>    
                 <%end%>    
+<div class="container">
 
             <h3>Ingredients</h3>
             <ul class="list-group pb-2">
@@ -17,7 +19,6 @@
                 </li>
                 <% end %>
             </ul>
-    </div>
     <hr>
     <h4>Add a Ingredient</h4>
     <%= simple_form_for [@cocktail, @dose] do |f| %>
@@ -32,5 +33,5 @@
     <%= link_to  "Edit", edit_cocktail_path ,method: :get, class: "btn btn-success m-2"%>
 
 
-
+</div>
 </div>
