--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -12,6 +12,9 @@
     <div class="container d-inline-flex">
         <div class="flex-grow-1 p-2 card">
         <div class="card-body m-2">
+            <p><%=@cocktail.description%></p>
+            <hr>
+            <h3>Instructions</h3>
             <p><%=@cocktail.instructions%></p>
         </div>
         </div>
