--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,9 @@
   </head>
 
   <body>
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
+<%= link_to  "Cocktails", cocktails_path %>
+</nav>
     <%= yield %>
   </body>
 </html>
