--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -6,7 +6,7 @@
     <h2> There is no picture :(,Would you like to add one now ?</h2>
     <%= simple_form_for [@cocktail] do |f| %>
     <%= f.input :photos, as: :file %>
-    <%= f.submit 'Change Cocktail', class: 'btn btn-success' %>
+    <%= f.submit 'Change Cocktail', class: 'btn btn-success m-2' %>
     <%end%>
     <%end%>
     <div class="container d-inline-flex">
@@ -31,7 +31,7 @@
         <h4>Add a Ingredient</h4>
         <%= simple_form_for [@cocktail, @dose] do |f| %>
         <%= f.input :ingredient_id,collection: @ingredients %>
-        <%= f.input :description %>
+        <%= f.input :description, label: "Amount"%>
 
         <%= f.submit 'Add Ingredient', class: 'btn btn-success m-2' %>
         <% end %>
