--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -37,10 +37,13 @@
         <% end %>
         </div>
     </div>
-    <%= link_to  "Back", cocktails_path, class: "btn btn-success m-2"%>
-    <%= link_to  "Delete", cocktail_path ,method: :delete, class: "btn btn-success m-2", data: { confirm: 'Are you sure you want to delete' }%>
-    <%= link_to  "Edit", edit_cocktail_path ,method: :get, class: "btn btn-success m-2"%>
+        <hr>
 
+    <div class="row justify-content-between">
+    <%= link_to  "Back", cocktails_path, class: "btn btn-success m-2 col-2"%>
+    <%= link_to  "Delete", cocktail_path ,method: :delete, class: "btn btn-success m-2 col-2", data: { confirm: 'Are you sure you want to delete' }%>
+    <%= link_to  "Edit", edit_cocktail_path ,method: :get, class: "btn btn-success m-2 col-2"%>
+    </div>
 
 </div>
 </div>
