--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -3,14 +3,15 @@
         <h1><%=@cocktail.name%></h2>
     </div>
     <% unless @cocktail.photos.attached? %>
-    <h2> There is no picture :(,Would you like to add one now ?</h2>
+    <h2> There is no picture :( </h2>
+    <h2>Would you like to add one now ?</h2>
     <%= simple_form_for [@cocktail] do |f| %>
     <%= f.input :photos, as: :file %>
     <%= f.submit 'Change Cocktail', class: 'btn btn-success m-2' %>
     <%end%>
     <%end%>
     <div class="container d-inline-flex">
-        <div class="flex-grow-1 p-2 card">
+        <div class="flex-grow-1 p-2 card col-8">
         <div class="card-body m-2">
             <p><%=@cocktail.description%></p>
             <hr>
@@ -18,11 +19,11 @@
             <p><%=@cocktail.instructions%></p>
         </div>
         </div>
-        <div class="m-2">
+        <div class="m-3">
         <h3>Ingredients</h3>
-        <ul class="list-group m-2 pb-2">
+        <ul class="list-group m-2 pb-2 col-4">
             <% @cocktail.doses.each do |dose| %>
-            <li class="list-group-item"><%= dose.description%> - <%= dose.ingredient.name%>
+            <li class="list-group-item m-2" style="width: max-content;"><%= dose.description%> - <%= dose.ingredient.name%>
                 <%= link_to "Delete", dose_path(dose), method: :delete, data: { confirm: 'Are you sure you want to delete' }%>
             </li>
             <% end %>
